--- a/Rsquaredforwebsite.Rmd
+++ b/Rsquaredforwebsite.Rmd
@@ -43,7 +43,9 @@ tss <- sum((y - mean(y))^2)
 mss/tss                      
 ```
 
-1\. *R-squared does not measure goodness of fit. It can be arbitrarily low when the model is completely correct.* By making$σ^2$ large, we drive R-squared towards 0, even when every assumption of the simple linear regression model is correct in every particular.
+It is important to observe the faults of R-squared because of its frequent use in research and statistics. Because it is used often to measure goodness of fit, it is beneficial for us to examine the following idea regarding why it might not always be the best measure. 
+
+\. *R-squared does not measure goodness of fit. It can be arbitrarily low when the model is completely correct.* By making$σ^2$ large, we drive R-squared towards 0, even when every assumption of the simple linear regression model is correct in every particular.
 
 What is $σ^2$? When we perform linear regression, we assume our model almost predicts our dependent variable. The difference between "almost" and "exact" is assumed to be a draw from a Normal distribution with mean 0 and some variance we call $σ^2$.
 
@@ -65,110 +67,6 @@ plot(rout ~ sigmas, type="b")
 ```
 
 R-squared tanks hard with increasing sigma, even though the model is *completely correct* in every respect.
-
-2.  *R-squared can be arbitrarily close to 1 when the model is totally wrong.*
-
-The point being made is that R-squared does not measure goodness of fit.
-
-```{r, echo=TRUE}
-set.seed(1)
-# our predictor is data from an exponential distribution
-x <- rexp(50,rate=0.005)
-# non-linear data generation
-y <- (x-1)^2 * runif(50, min=0.8, max=1.2) 
-# clearly non-linear
-plot(x,y)				     
-```
-
-```{r,echo=TRUE}
-summary(lm(y ~ x))$r.squared
-```
-
-It's very high at about 0.85, but the model is completely wrong. Using R-squared to justify the "goodness" of our model in this instance would be a mistake. Hopefully one would plot the data first and recognize that a simple linear regression in this case would be inappropriate.
-
-3\. *R-squared says nothing about prediction error, even with* $σ^2$ exactly the same, and no change in the coefficients. R-squared can be anywhere between 0 and 1 just by changing the range of X. We're better off using Mean Square Error (MSE) as a measure of prediction error.
-
-MSE is basically the fitted y values minus the observed y values, squared, then summed, and then divided by the number of observations.
-
-Let's demonstrate this statement by first generating data that meets all simple linear regression assumptions and then regressing y on x to assess both R-squared and MSE.
-
-```{r,echo=TRUE}
-x <- seq(1,10,length.out = 100)
-set.seed(1)
-y <- 2 + 1.2*x + rnorm(100,0,sd = 0.9)
-mod1 <- lm(y ~ x)
-summary(mod1)$r.squared
-# Mean squared error
-sum((fitted(mod1) - y)^2)/100
-```
-
-Now repeat the above code, but this time with a different range of x. Leave everything else the same:
-
-```{r,echo=TRUE}
- # new range of x
-x <- seq(1,2,length.out = 100)      
-set.seed(1)
-y <- 2 + 1.2*x + rnorm(100,0,sd = 0.9)
-mod1 <- lm(y ~ x)
-summary(mod1)$r.squared
-# Mean squared error
-sum((fitted(mod1) - y)^2)/100        
-```
-
-The R-squared falls from 0.94 to 0.15 but the MSE remains the same. In other words the predictive ability is the same for both data sets, but the R-squared would lead you to believe the first example somehow had a model with more predictive power.
-
-4.  *R-squared can easily go down when the model assumptions are better fulfilled.*
-
-Let's examine this by generating data that would benefit from transformation. Notice the R code below is very much like our previous efforts but now we exponentiate our y variable.
-
-```{r,echo=TRUE}
-x <- seq(1,2,length.out = 100)
-set.seed(1)
-y <- exp(-2 - 0.09*x + rnorm(100,0,sd = 2.5))
-summary(lm(y ~ x))$r.squared
-plot(lm(y ~ x), which=3)
-```
-
-R-squared is very low and our residuals vs. fitted plot reveals outliers and non-constant variance. A common fix for this is to log transform the data. Let's try that and see what happens:
-
-```{r,echo=TRUE}
-plot(lm(log(y)~x),which = 3) 
-```
-
-The diagnostic plot looks much better. Our assumption of constant variance appears to be met. But look at the R-squared:
-
-```{r,echo=TRUE}
-summary(lm(log(y)~x))$r.squared 
-```
-
-It's even lower! This is an extreme case and it doesn't always happen like this. In fact, a log transformation will usually produce an increase in R-squared. But as just demonstrated, assumptions that are better fulfilled don't always lead to higher R-squared.
-
-5.  *It is very common to say that R-squared is "the fraction of variance explained" by the regression.* $$Yet$$ if we regressed X on Y, we'd get exactly the same R-squared. This in itself should be enough to show that a high R-squared says nothing about explaining one variable by another.
-
-This is the easiest statement to demonstrate:
-
-```{r,echo=TRUE}
-x <- seq(1,10,length.out = 100)
-y <- 2 + 1.2*x + rnorm(100,0,sd = 2)
-summary(lm(y ~ x))$r.squared
-summary(lm(x ~ y))$r.squared
-```
-
-Does x explain y, or does y explain x? Are we saying "explain" to dance around the word "cause"? In a simple scenario with two variables such as this, R-squared is simply the square of the correlation between x and y:
-
-```{r,echo=TRUE}
-all.equal(cor(x,y)^2, summary(lm(x ~ y))$r.squared, summary(lm(y ~ x))$r.squared)
-```
-
-Let's recap:
-
--   R-squared does not measure goodness of fit.
-
--   R-squared does not measure predictive error.
-
--   R-squared does not necessarily increase when assumptions are better satisfied.
-
--   R-squared does not measure how one variable explains another.
-
+After addressing that this might not always be the best measure to use, we probably want to consider some alternatives. Other measured that can be used instead of R-squared would include Mean Absolute Error, or Root Mean Squared Error. 
 
 This information is from <https://data.library.virginia.edu/is-r-squared-useless/>. 
