--- a/machinelearning.Rmd
+++ b/machinelearning.Rmd
@@ -22,11 +22,15 @@ trainTransformed <- predict(preProcValues, irisTrain)
 preProcValues <- preProcess(irisTest, method = c("center", "scale"))
 testTransformed <- predict(preProcValues, irisTest)
 ```
-#Clustering
 
-In the following example I use spacial clustering to identify which data points belong to each classification. I use a k-means algorithm, one of the simplest to understand. I use 2, 3, and 4 clusters to see how well the data is centered around these cluster centers. 
+# Clustering
 
-This is the full data set based on 2 clusters in a table form. 
+In the following example I use spacial clustering to identify which data points belong to each classification. I use a k-means algorithm, one of the simplest to understand. I use 2, 3, and 4 clusters to see how well the data is centered around these cluster centers.
+
+## Two Cluster Centers
+
+This is the full data set based on 2 clusters in a table form.
+
 ```{r}
 TwoClusters<-kmeans(trainTransformed[,-5],centers=2)
 Clusterdata<-trainTransformed
@@ -36,7 +40,7 @@ knitr::kable(Clusterdata)%>%
   kableExtra::scroll_box(width = "100%",height="300px")
 ```
 
-Here are a few graphic representations showing how the data is split when 2 clusters are used. 
+Here are a few graphic representations showing how the data is split when 2 clusters are used. As you can see, it splits one of the species pretty accurately. However, the other 2 do not split well when only two clusters are used.
 
 ```{r}
 ggplot(data=Clusterdata,mapping = aes(x=Sepal.Width,y=Petal.Width,color=Cluster))+geom_point(alpha=0.5)
@@ -51,7 +55,9 @@ ggplot(data=Clusterdata,mapping = aes(x=Sepal.Width,y=Petal.Width,color=Species)
   geom_point(data=as.data.frame(TwoClusters$centers), aes(color="Cluster center"), size=5) + theme(legend.title = element_blank())+ggtitle("Iris Cluster Demonstration")
 ```
 
-This is a table of the data when 3 data clusters are used. 
+## Three Cluster Centers
+
+This is a table of the data when 3 data clusters are used.
 
 ```{r}
 ThreeClusters<-kmeans(trainTransformed[,-5],centers=3)
@@ -62,7 +68,7 @@ knitr::kable(Clusterdata)%>%
   kableExtra::scroll_box(width = "100%",height="300px")
 ```
 
-These graphs show how the data is split when 3 clusters are used rather than 2. As you can see, using 3 centers allows for a more accurate split of the data. 
+These graphs show how the data is split when 3 clusters are used rather than 2. As you can see, using 3 centers allows for a more accurate split of the data.
 
 ```{r}
 ggplot(data=Clusterdata,mapping = aes(x=Sepal.Width,y=Petal.Width,color=Cluster))+geom_point(alpha=0.5)
@@ -77,7 +83,9 @@ ggplot(data=Clusterdata,mapping = aes(x=Sepal.Width,y=Petal.Width,color=Species)
   geom_point(data=as.data.frame(ThreeClusters$centers), aes(color="Cluster center"), size=5) + theme(legend.title = element_blank())+ggtitle("Iris Cluster Demonstration")
 ```
 
-And lastly, here is a table form of the data when 4 clusters are used. 
+## 4 Cluster Centers
+
+And lastly, here is a table form of the data when 4 clusters are used.
 
 ```{r}
 FourClusters<-kmeans(trainTransformed[,-5],centers=4)
@@ -88,7 +96,7 @@ knitr::kable(Clusterdata)%>%
   kableExtra::scroll_box(width = "100%",height="300px")
 ```
 
-Here are some visual representations of what the data would look like when split between 4 cluster centers. Because there are only 3 species, 4 cluster centers does not prove to be extra beneficial. 
+Here are some visual representations of what the data would look like when split between 4 cluster centers. Because there are only 3 species, 4 cluster centers does not prove to be extra beneficial.
 
 ```{r}
 ggplot(data=Clusterdata,mapping = aes(x=Sepal.Width,y=Petal.Width,color=Cluster))+geom_point(alpha=0.5)
@@ -102,6 +110,3 @@ ggplot(data=Clusterdata,mapping = aes(x=Sepal.Width,y=Petal.Width,color=Cluster)
 ggplot(data=Clusterdata,mapping = aes(x=Sepal.Width,y=Petal.Width,color=Species))+geom_point(alpha=0.5) + 
   geom_point(data=as.data.frame(FourClusters$centers), aes(color="Cluster center"), size=5) + theme(legend.title = element_blank())+ggtitle("Iris Cluster Demonstration")
 ```
-
-
-
