--- a/resumeforwebsite.Rmd
+++ b/resumeforwebsite.Rmd
@@ -87,6 +87,6 @@ GPA: 4.0/4.0
 
 • Proficient in Microsoft Word, PowerPoint and Excel\
 • Proficient in Thomson Reuters Accounting Software\
-• Working knowledge of Microsoft Access\
+• Working knowledge of Microsoft Access and R Statistical Software\
 • Efficient file management\
 • Strong written and oral communication skills
